--- a/musica.html
+++ b/musica.html
@@ -7,7 +7,68 @@
         <link rel="stylesheet" href="css/bootstrap.css">
         <link rel="stylesheet" href="css/musica.css">
     </head>
-    <body>
+    <body class="container-fluid">
+      <div class="container encabezado">
+        <div class="row">
+          <div class="col-lg-6">
+            <img class="logo" src="img/nacho_logo.png" alt="Nacho Logo">
+          </div>
+          <div class="col-lg-6">
+            <img class="img-social float-right" src="img/fb.png" alt="facebook">
+            <img class="img-social float-right" src="img/ig.png" alt="instagram">
+            <img class="img-social float-right" src="img/tt.png" alt="twitter">
+          </div>
+        </div>
+      </div>
+      <nav class="container navbar navbar-expand-lg bg-light">
+        <div class="navbar-collapse navbar" id="navbarTogglerDemo03">
+          <ul class="navbar-nav">
+              <li class="nav-item"><a class="nav-link" href="#">Inicio</a></li>
+              <li class="nav-item"><a class="nav-link" href="#">Biografía</a></li>
+              <li class="nav-item"><a class="nav-link" href="#">Carrera</a></li>
+              <li class="nav-item"><a class="nav-link" href="#">Discografía</a></li>
+              <li class="nav-item"><a class="nav-link" href="#">Conciertos</a></li>
+              <li class="nav-item"><a class="nav-link" href="#">Contacto</a></li>
+            </ul>
+        </div>
+      </nav>
+      <hr>
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-9">
+            <div class="row">
+              <div class="col-lg-9">
+                <h2>Nacho aseguró que si pudiera se reuniría con Nicolás Maduro</h2>
+                <p class="text-justify">El artista venezolano Miguel Ignacio Mendoza Donatti, conocido como “Nacho”, aseguró este lunes,       durante una entrevista dirigida por Jaime Bayly, presentador y periodista peruano, que si Nicolás Maduro lo invitara a una reunión él iría. Sin embargo, cuando Bayly le preguntó: ¿Qué consejo le daría?, el artista respondió que le diría que dejara el poder.
+                  “Claro que iría a la reunión, así como Trump va una reunión con Putin (primer mandatario de Rusia)”, dijo Nacho.
+                  Aseguró que aunque tuviera la oportunidad de atentar contra la vida de Maduro no sería capaz de hacerlo.</p>
+              </div>
+              <div class="col-lg-3">
+                <img class="align-middle img_content rounded"src="img/nacho_01.jpg" alt="Nacho">
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3">
+              <div class="row">
+                  <form class="">
+                    <input class="form-control" type="search" placeholder="Buscar..." aria-label="Search">
+                    <button class="btn btn-primary" type="submit">Buscar</button>
+                  </form>
+                </div>
+                <div class="row">
+                  <ul class="list-group text-center">
+                    <li class="list-group-item">Cras justo odio</li>
+                    <li class="list-group-item">Dapibus ac facilisis in</li>
+                    <li class="list-group-item">Morbi leo risus</li>
+                    <li class="list-group-item">Porta ac consectetur ac</li>
+                    <li class="list-group-item">Vestibulum at eros</li>
+                  </ul>
+                </div>
+            </div>
+        </div>
 
+
+
+      </div>
     </body>
 </html>
