--- a/musica.html
+++ b/musica.html
@@ -1,74 +1,108 @@
 <!DOCTYPE html>
 <html>
-    <head>
+      <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,user-scalable=no">
-        <title>Blog de Nacho</title>
+        <meta property="og:image" content="http://lipis.github.io/bootstrap-social/assets/img/bootstrap-social.png" />
+        <title>Blog de Musica - Nacho</title>
         <link rel="stylesheet" href="css/bootstrap.css">
         <link rel="stylesheet" href="css/musica.css">
-    </head>
-    <body class="container-fluid">
-      <div class="container encabezado">
+      </head>
+
+      <header class="encabezado container">
         <div class="row">
-          <div class="col-lg-6">
+          <div class="col-lg-8 col-md-8 col-sm-12">
             <img class="logo" src="img/nacho_logo.png" alt="Nacho Logo">
           </div>
-          <div class="col-lg-6">
+          <div class="col-lg-4 col-md-4 col-sm-12">
             <img class="img-social float-right" src="img/fb.png" alt="facebook">
             <img class="img-social float-right" src="img/ig.png" alt="instagram">
             <img class="img-social float-right" src="img/tt.png" alt="twitter">
           </div>
         </div>
-      </div>
-      <nav class="container navbar navbar-expand-lg bg-light">
-        <div class="navbar-collapse navbar" id="navbarTogglerDemo03">
-          <ul class="navbar-nav">
-              <li class="nav-item"><a class="nav-link" href="#">Inicio</a></li>
-              <li class="nav-item"><a class="nav-link" href="#">Biografía</a></li>
-              <li class="nav-item"><a class="nav-link" href="#">Carrera</a></li>
-              <li class="nav-item"><a class="nav-link" href="#">Discografía</a></li>
-              <li class="nav-item"><a class="nav-link" href="#">Conciertos</a></li>
-              <li class="nav-item"><a class="nav-link" href="#">Contacto</a></li>
-            </ul>
-        </div>
+      </header>
+
+      <nav class="container navbar bg-light navbar-expand-lg">
+        <ul class="nav justify-content-between navbar-collapse">
+          <li class="nav-items"><a class="nav-link" href="#">Inicio</a></li>
+          <li class="nav-items"><a class="nav-link" href="#">Biografía</a></li>
+          <li class="nav-items"><a class="nav-link" href="#">Carrera Musical</a></li>
+          <li class="nav-items"><a class="nav-link" href="#">Discografía</a></li>
+          <li class="nav-items"><a class="nav-link" href="#">Conciertos</a></li>
+          <li class="nav-items"><a class="nav-link" href="#">Contacto</a></li>
+        </ul>
+
       </nav>
-      <hr>
+
+    <body class="container-fluid">
+
       <div class="container">
         <div class="row">
-          <div class="col-lg-9">
+          <div class="col-lg-9 col-md-9 col-xs-12">
             <div class="row">
-              <div class="col-lg-9">
+              <div class="col-lg-9 col-md-9 col-sm-9">
                 <h2>Nacho aseguró que si pudiera se reuniría con Nicolás Maduro</h2>
-                <p class="text-justify">El artista venezolano Miguel Ignacio Mendoza Donatti, conocido como “Nacho”, aseguró este lunes,       durante una entrevista dirigida por Jaime Bayly, presentador y periodista peruano, que si Nicolás Maduro lo invitara a una reunión él iría. Sin embargo, cuando Bayly le preguntó: ¿Qué consejo le daría?, el artista respondió que le diría que dejara el poder.
+                <p class="text-justify">El artista venezolano Miguel Ignacio Mendoza Donatti, conocido como “Nacho”, aseguró este lunes, durante una entrevista dirigida por Jaime Bayly, presentador y periodista peruano, que si Nicolás Maduro lo invitara a una reunión él iría. Sin embargo, cuando Bayly le preguntó: ¿Qué consejo le daría?, el artista respondió que le diría que dejara el poder.
                   “Claro que iría a la reunión, así como Trump va una reunión con Putin (primer mandatario de Rusia)”, dijo Nacho.
                   Aseguró que aunque tuviera la oportunidad de atentar contra la vida de Maduro no sería capaz de hacerlo.</p>
-              </div>
-              <div class="col-lg-3">
+                </div>
+              <div class="col-lg-3 col-md-3 col-sm-3">
                 <img class="align-middle img_content rounded"src="img/nacho_01.jpg" alt="Nacho">
+              </div>
+              </div>
+            <div class="row">
+              <div class="col-lg-1 col-md-1 col-sm-1">
+                <img class="img-social" src="img/coment.png" alt="Comentario">
+              </div>
+              <div class="col-lg-11 col-md-11 col-sm-11">
+              <textarea class="form-control" name="comentarios" rows="3" placeholder="Comentario...."></textarea>
+              </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-3 col-md-3 col-sm-3">
+                  <img class="align-middle img_content rounded"src="img/nacho_02.jpg" alt="Nacho">
+                </div>
+                <div class="col-lg-9 col-md-9 col-sm-9">
+                  <h2>Nacho explicó de qué se tratará su “encuentro” con Juan Guaidó</h2>
+                  <p class="text-justify">Miguel Ignacio Mendoza, conocido como "Nacho", se refirió este viernes sobre su "encuentro" con Juan Guaidó mediante un Instagram live este domingo. Explicó sus razones para realizar esta entrevista con el presidente de la Asamblea Nacional.
+                    "Muchos aplaudieron cuando decidí dejar situaciones políticas en mis redes sociales, pero este encuentro no se trata de un debate político se trata de poner a la orden mi plataforma de Instagram como canal de comunicación para quienes ven mis publicaciones diarias y dirigido para quien hoy es el líder de la oposición venezolana", expresó en un video publicado en su cuenta.
+                    Explicó que esta iniciativa se debe a que desea aportar "su granito de arena"para resolver la situación que enfrenta el país. "No vamos a hablar nada de mí, ni vamos a hablar de mi viaje a Venezuela, en este momento el país debe estar alineado en un enfoque que no sea la farándula", agregó.
+                    El cantautor venezolano aseguró que considera que los influencers venezolanos deben prestar sus plataformas sociales para aquellos políticos o representantes que se están dando a conocer. </p>
+                  </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-1 col-md-1 col-sm-1">
+                  <img class="img-social" src="img/coment.png" alt="Comentario">
+                </div>
+              <div class="col-lg-11 col-md-11 col-sm-11">
+              <textarea class="form-control" name="comentarios" rows="3" placeholder="Comentario...."></textarea>
               </div>
             </div>
           </div>
-          <div class="col-lg-3">
+          <div class="col-lg-3 col-md-3">
               <div class="row">
-                  <form class="">
-                    <input class="form-control" type="search" placeholder="Buscar..." aria-label="Search">
-                    <button class="btn btn-primary" type="submit">Buscar</button>
+                  <form class="form-inline">
+                    <input class="col-lg-8 form-control" type="search" placeholder="Buscar..." aria-label="Search">
+                    <button class=" col-lg-4 btn btn-primary" type="submit">Buscar</button>
                   </form>
                 </div>
                 <div class="row">
-                  <ul class="list-group text-center">
-                    <li class="list-group-item">Cras justo odio</li>
-                    <li class="list-group-item">Dapibus ac facilisis in</li>
-                    <li class="list-group-item">Morbi leo risus</li>
-                    <li class="list-group-item">Porta ac consectetur ac</li>
-                    <li class="list-group-item">Vestibulum at eros</li>
+                  <ul class="list-group text-center col-lg-12 col-md-12">
+                    <li class="list-group-item"><a href="#">Ignacio Mendoza</a></li>
+                    <li class="list-group-item">Nacho</li>
+                    <li class="list-group-item">Venezuela</li>
+                    <li class="list-group-item">Manuel Turizo</li>
+                    <li class="list-group-item">Los Mendoza</li>
+                    <li class="list-group-item">Inger Mendoza</li>
+                    <li class="list-group-item">Chino y Nacho</li>
+                    <li class="list-group-item">No Te Vas</li>
+                    <li class="list-group-item">Dejalo</li>
                   </ul>
                 </div>
             </div>
-        </div>
-
-
-
+          </div>
       </div>
+
+
     </body>
 </html>
