Blog Comida al 90%

--- a/comida.html
+++ b/comida.html
@@ -3,11 +3,166 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,user-scalable=no">
-        <title>Blog Gastronomia Venezuela</title>
+        <title>Blog Gastronomia Venezolana</title>
         <link rel="stylesheet" href="css/foundation.css">
+        <link rel="stylesheet" href="css/foundation-icons.css">
         <link rel="stylesheet" href="css/comida.css">
     </head>
-    <body>
+    <body class="cuerpo">
+
+
+      <div class="grid-container opacity callout primary">
+
+
+        <div class="medium-4">
+          <h1>Venezolanisima</h1>
+          <p class"help-text">La mejor y mas variada gastronomia del mundo</p>
+        </div>
+        <hr>
+
+        <div class="grid-x">
+          <div class="medium-4 cell hide-for-small-only callout alert">
+
+            <div class="grid-x input-group">
+              <input class="input-group-field" type="text" placeholder="Buscar">
+              <div class="input-group-button">
+                <button type="submit" name="enviar" class="button">
+                  <i class="step fi-magnifying-glass"></i>
+                </button>
+              </div>
+            </div>
+
+            <div class="grid-x">
+              <div class="cell vertical menu expanded">
+                <a href="#" class="hollow button">Inicio</a>
+                <a href="#" class="hollow button">Platos Fuertes</a>
+                <a href="#" class="hollow button">Postres</a>
+              </div>
+            </div>
+
+            <div class="grid-x">
+
+              <h5>Favoritos:</h5>
+
+              <div class="grid-x large-uncollapse">
+                  <div class="medium-4">
+                    <img src="img/hallaca.jpg" alt="Hallacas" class="thumbnail"/>
+                  </div>
+                  <div class="medium-4">
+                    <img src="img/arepas.jpg" alt="Arepas" class="thumbnail"/>
+                  </div>
+                  <div class="medium-4">
+                    <img src="img/empanadas.jpg" alt="Empanadas" class="thumbnail"/>
+                  </div>
+                  <div class="medium-4">
+                    <img src="img/pabellon.jpg" alt="Pabellon" class="thumbnail"/>
+                  </div>
+                  <div class="medium-4">
+                    <img src="img/pasticho.jpg" alt="Pabellon" class="thumbnail"/>
+                  </div>
+                  <div class="medium-4">
+                    <img src="img/lechosa.jpg" alt="Pabellon" class="thumbnail"/>
+                  </div>
+                </div>
+              </div>
+
+              <div class="grid-x">
+                <ul class="vertical menu">
+                  <h5><a href="#">Historial:</a></h5>
+                <li><a href="#">Arepas Venezolanas</a></li>
+                <li><a href="#">Reina Pepiada</a></li>
+                <li><a href="#">Cachapa con Queso</a></li>
+                <li><a href="#">Empanadas de Carne</a></li>
+                <li><a href="#">Empanadas de Queso</a></li>
+                <li><a href="#">Pabellon</a></li>
+                <li><a href="#">Arroz con Coco</a></li>
+                <li><a href="#">Patacones</a></li>
+                <li><a href="#">Hervido de Gallina</a></li>
+                <li><a href="#">Hallacas</a></li>
+                <li><a href="#">Dulce de Lechosa</a></li>
+                </ul>
+
+
+
+
+              </div>
+          </div>
+
+          <div class="cell medium-8 small-12">
+            <div class="card">
+              <div class="card-section">
+                <h4>Pasticho o Lasagna de Carne</h4>
+                <p>24 de Febrero de 2019</p>
+              </div>
+              <div class="card-section">
+                <img src="img/pasticho2.jpg">
+              </div>
+              <div class="card-section">
+                <ul><h5>Ingredientes:</h5>
+                  <li>1/2 kilo de laminas de pasta (de las planas)</li>
+                  <li>1 cucharada de aceite de maíz</li>
+                  <li>1 cebolla blanca, picada finamente</li>
+                  <li>3 dientes de ajo, machacados</li>
+                  <li>Sal al gusto, también sal de ajo</li>
+                  <li>1 kilo de carne molida (pulpa negra) con poca grasa</li>
+                  <li>4 tiras de tocineta picada en trozos pequeños (le da sabor)</li>
+                  <li>1 lata grande de tomates o 4 tazas de tomate maduro, pelado, sin semillas y picado</li>
+                  <li>1 lata pequeña de puré de tomate</li>
+                  <li>1/2 cucharadita de albahaca, orégano y 1 hoja de laurel</li>
+                  <li>1/2 taza de vino rojo</li>
+                  <li>Salsa Bechamel</li>
+                  <li>1/2 kilo de queso mozzarella</li>
+                  <li>200 gramos de queso parmesano</li>
+                </ul>
+                <h5>Preparación:</h5>
+                <p class="text-justify">En una sartén coloca el aceite, a fuego medio, pon a dorar ligeramente la cebolla y el ajo.
+                  Agrega la carne y dorala hasta que quede cocida. Escurre la grasa, de acuerdo a tu gusto sazonala con la sal y la pimienta. Añade los tomates, el puré de tomate, las hierbas, el vino y el caldo (si no usas vino agregue 2 tazas de caldo), Mezcla bien y, a fuego lento, sin tapar, cocinalo revolviendo ocasionalmente durante aproximadamente 1 y 1/2 horas. Si la salsa se espesa mucho ve agregando agua caliente. Verifica la sazón y retira la hoja de laurel.
+                  Precalienta el horno a 350ºF o a 200ºC. Bechamel (ver preparación) En una envase refractario o molde, engrasado con mantequilla y un poco del liquido de la salsa (esto es para que el pasticho no quede seco), extiende en el fondo una capa de pasta, encima coloca la salsa de carne; inmediatamente pon otra capa de pasta, una de bechamel, una de mozzarella.
+                  Repite el procedimiento, debe ser por lo menos 3 capas, así que calcula de acuerdo para que te alcance. Debe terminar con bechamel y queso parmesano.
+                  Cubrelo con papel de aluminio y llevalo al horno precalentado por 30 minutos. Retira el papel aluminio y dejalo cocinar hasta quede burbujeante y ligeramente doradito por encima. Una vez listo y fuera del horno dejalo reposar por unos 5 o 10 minutos antes de servir. ¡Buen Provecho!</p>
+                  <label>Escribe un comentario
+                    <textarea name="comentario1" rows="1"></textarea>
+                  </label>
+                  <a href="#" class="button expanded"><i class="fi-pencil"></i> Publicar</a>
+              </div>
+
+            </div>
+            <div class="card">
+              <div class="card-section">
+                <h4>Dulce de Lechosa</h4>
+                <p>2 de Marzo de 2019</p>
+              </div>
+              <div class="card-section">
+                <img src="img/lechosa2.jpg">
+              </div>
+              <div class="card-section">
+                <ul><h5>Ingredientes:</h5>
+                  <li>1 lechosa de dos kilos y medio mas o menos</li>
+                  <li>3 litros de agua</li>
+                  <li>1/2 cucharada de bicarbonato</li>
+                  <li>12 tazas de papelón rallado de la panela clara</li>
+                  <li>5 tazas de azúcar</li>
+                  <li>8 clavos de especia</li>
+                  <li>3 1/2 litros de agua</li>
+                </ul>
+                <h5>Preparación:</h5>
+                <p class="text-justify">Pelar y cortar la lechosa en lonjitas de 1/2 centímetro de espeso más o menos. Puedes tenderla al sol de la mañana durante unas horas antes de cocinarla.
+                  Colocar en una olla, llevar a un hervor. Cocinar tapado durante cinco minutos, retirar del fuego pasar por un colador de pasta. Bañar con agua bien fría directamente del grifo.
+                  Colocar en la olla el papelón, el azúcar, los clavos y el agua para hacer el almíbar. Dejarlo cocinar en la olla destapada durante 15 minutos.
+                  Pasar la lechosa a otra olla grande y colocar sobre ella el colador de pasta. Poner dentro un liencillo. Pasar a través de él el almíbar y dejarlo caer en la olla que contiene la lechosa. Ahora poner la olla en el fuego y cocínala durante aproximadamente una hora y media. Sabrás que el almíbar está a punto cuando las gotas caigan lentamente de una cuchara de madera, formando un hilito.
+                  Retira la olla del fuego, deja enfriar y mételo en la nevera. Tapa la dulcera con papel de plástico.</p>
+                  <label>Escribe un comentario
+                    <textarea name="comentario1" rows="1"></textarea>
+                  </label>
+                  <a href="#" class="button expanded"><i class="fi-pencil"></i> Publicar</a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+
+      </div>
+
       <script type="js_flex/vendor/jquery.js"></script>
       <script type="js_flex/vendor/what-input.js"></script>
       <script type="js_flex/vendor/foundation.js"></script>
