--- a/comida.html
+++ b/comida.html
@@ -11,7 +11,7 @@
     <body class="cuerpo">
 
 
-      <div class="grid-container opacity callout primary">
+      <div id="uno" class="grid-container callout">
 
 
         <div class="medium-4">
