--- a/turismo.html
+++ b/turismo.html
@@ -1,15 +1,102 @@
 <!DOCTYPE html>
-<html>
+<html style="background-image: url(img/losroques.jpg);background-attachment: fixed">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximun-scale=1.0">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/materialize.css" type="text/css" media="screen, projection"/>
     <link rel="stylesheet" href="css/turismo.css" type="text/css" media="screen, projection"/>
+    <link rel="stylesheet" href="css/materialize-social.css" type="text/css" media="screen, projection"/>
     <title>Blog Turismo en Venezuela</title>
   </head>
   <body>
+    <div class="row">
+      <div class="col l12 blue darken-4 white-text cabecera">
+        <div class="row">
+          <div class="col l2">
+            <a href="#" class="brand-logo left" ><img src="img/venezuela.png" alt="logo-perfil" class="logo-perfil"></a>
+          </div>
+            <ul class="right">
+              <a class="waves-effect waves-light btn"><i class="material-icons left">home</i>Inicio</a>
+              <a class="waves-effect waves-light btn"><i class="material-icons left">location_on</i>Sitios Favoritos</a>
+              <a class="waves-effect waves-light btn"><i class="material-icons left">flight</i>Proximos Viajes</a>
+              <a class="waves-effect waves-light btn"><i class="material-icons left">location_city</i>Recomendaciones</a>
+            </ul>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col l1">
+        <ul class="center-align">
+          <li><a class="waves-effect waves-light btn-floating btn-large social google"><i class="fa fa-google"></i></a></li>
+          <li><a class="waves-effect waves-light btn-floating btn-large social facebook"><i class="fa fa-facebook"></i></a></li>
+          <li><a class="waves-effect waves-light btn-floating btn-large social instagram"><i class="fa fa-instagram"></i></a></li>
+          <li><a class="waves-effect waves-light btn-floating btn-large social youtube"><i class="fa fa-youtube"></i></a></li>
+          <li><a class="waves-effect waves-light btn-floating btn-large social twitter"><i class="fa fa-twitter"></i></a></li>
+        </ul>
+      </div>
+      <div class="col l4">
+        <img src="img/medanos_coro.jpg" class="responsive-img" alt="imagen">
+        <img src="img/morrocoy.jpg" class="responsive-img" alt="imagen">
+      </div>
+      <div class="col l3">
+        <img src="img/salto_angel.png" class="responsive-img" alt="imagen">
+      </div>
+      <div class="col l4">
+        <img src="img/los_roques.jpg" class="responsive-img" alt="imagen">
+        <img src="img/salto_angel.jpg" class="responsive-img" alt="imagen">
+        <img src="img/islatortuga.jpg" class="responsive-img" alt="imagen">
+      </div>
+    </div>
+    <div class="row">
+      <div class="col l8">
+        <div class="row">
+          <div class="card-panel white black-text">
+            <div class="col l4 s12">
+              <img src="img/morrocoy_03.jpg" alt="Parque Nacional Morrocoy">
+            </div>
+            <h4>Parque Nacional Morrocoy</h4>
+              <div class="chip">
+                3 de Marzo de 2019<i class="material-icons">view_agenda</i>
+              </div>
+              <div class="chip">
+                Tucacas, Falcon<i class="material-icons">location_on</i>
+              </div>
+                <p class="flow-text">El parque nacional Morrocoy es una isla protegida y reserva marina de la costa caribeña de Venezuela. Situado en el estado de Falcón, es famoso por sus manglares, playas isleñas y cayos, como Cayo Sombrero. Las aguas transparentes del parque cuentan con arrecifes de coral repletos de peces, tortugas marinas y delfines. En las marismas del Refugio de Fauna Silvestre de Cuare abundan las especies de aves, incluidos el corocoro rojo y el flamenco.</p>
+          </div>
+
+        </div>
+        <div class="row blue white-text">
+          <div class="input-field col l6 s12 ">
+            <i class="material-icons prefix">perm_identity</i>
+            <input type="text" id="nombre" class="validate">
+            <label for="nombre" class="white-text">Nombre y Apellido</label>
+          </div>
+          <div class="input-field col l6 s12 ">
+            <i class="material-icons prefix">email</i>
+            <input type="email" id="email" class="validate">
+            <label for="email" class="white-text" data-success="email correcto" data-error="Ingresa un email valido">E-mail</label>
+          </div>
+          <div class="input-field col s12 ">
+            <i class="material-icons prefix">chat_bubble</i>
+            <textarea id="texto" class="materialize-textarea"></textarea>
+            <label for="texto" class="white-text">Comentario</label>
+          </div>
+        </div>
+      </div>
+      <div class="col l4 s12">
+        <div class="card-panel white black-text">
+          <div class="card">
+            <img src="img/perfil.jpg" alt="perfil" class="circle responsive-img">
+            <h4>Perfil del autor</h4>
+          </div>
+            <p class="flow-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+      </div>
+
+    </div>
 
     <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="js_mat/materialize.js"></script>
