--- a/musica.html
+++ b/musica.html
@@ -11,35 +11,35 @@
 
       <header class="encabezado container">
         <div class="row">
-          <div class="col-lg-8 col-md-8 col-sm-12">
-            <img class="logo" src="img/nacho_logo.png" alt="Nacho Logo">
+          <div class="col-lg-3 col-md-3 col-sm-12">
+            <img class="rounded logo" src="img/nacho_logo.png" alt="Nacho Logo">
           </div>
-          <div class="col-lg-4 col-md-4 col-sm-12">
+          <div class="col-lg-9 col-md-9 col-sm-12">
             <img class="img-social float-right" src="img/fb.png" alt="facebook">
             <img class="img-social float-right" src="img/ig.png" alt="instagram">
             <img class="img-social float-right" src="img/tt.png" alt="twitter">
           </div>
         </div>
+
       </header>
+        <nav class="container nav navbar bg-light">
+          <ul class="nav nav-pills nav-justified navbar-expand-sm navbar-collapse">
+            <li class="nav-item"><a class="nav-link" href="#">Inicio</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">Biografía</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">Carrera Musical</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">Discografía</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">Conciertos</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">Contacto</a></li>
+          </ul>
+        </nav>
 
-      <nav class="container navbar bg-light navbar-expand-lg">
-        <ul class="nav justify-content-between navbar-collapse">
-          <li class="nav-items"><a class="nav-link" href="#">Inicio</a></li>
-          <li class="nav-items"><a class="nav-link" href="#">Biografía</a></li>
-          <li class="nav-items"><a class="nav-link" href="#">Carrera Musical</a></li>
-          <li class="nav-items"><a class="nav-link" href="#">Discografía</a></li>
-          <li class="nav-items"><a class="nav-link" href="#">Conciertos</a></li>
-          <li class="nav-items"><a class="nav-link" href="#">Contacto</a></li>
-        </ul>
 
-      </nav>
+      <body class="container-fluid">
 
-    <body class="container-fluid">
-
-      <div class="container">
+      <div class="container principal">
         <div class="row">
-          <div class="col-lg-9 col-md-9 col-xs-12">
-            <div class="row">
+          <div class="col-lg-9 col-md-9 col-sm-12">
+            <div class="row entradas">
               <div class="col-lg-9 col-md-9 col-sm-9">
                 <h2>Nacho aseguró que si pudiera se reuniría con Nicolás Maduro</h2>
                 <p class="text-justify">El artista venezolano Miguel Ignacio Mendoza Donatti, conocido como “Nacho”, aseguró este lunes, durante una entrevista dirigida por Jaime Bayly, presentador y periodista peruano, que si Nicolás Maduro lo invitara a una reunión él iría. Sin embargo, cuando Bayly le preguntó: ¿Qué consejo le daría?, el artista respondió que le diría que dejara el poder.
@@ -58,7 +58,7 @@
               <textarea class="form-control" name="comentarios" rows="3" placeholder="Comentario...."></textarea>
               </div>
             </div>
-            <div class="row">
+            <div class="row entradas">
                 <div class="col-lg-3 col-md-3 col-sm-3">
                   <img class="align-middle img_content rounded"src="img/nacho_02.jpg" alt="Nacho">
                 </div>
@@ -79,14 +79,14 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-3 col-md-3">
-              <div class="row">
+          <div class="col-lg-3 col-md-3 d-none d-md-block">
+              <div class="row entradas">
                   <form class="form-inline">
-                    <input class="col-lg-8 form-control" type="search" placeholder="Buscar..." aria-label="Search">
-                    <button class=" col-lg-4 btn btn-primary" type="submit">Buscar</button>
+                    <input class="col-lg-8 col-md-8 form-control" type="search" placeholder="Buscar..." aria-label="Search">
+                    <button class=" col-lg-4 col-md-4 btn btn-primary" type="submit">Buscar</button>
                   </form>
                 </div>
-                <div class="row">
+                <div class="row entradas">
                   <ul class="list-group text-center col-lg-12 col-md-12">
                     <li class="list-group-item"><a href="#">Ignacio Mendoza</a></li>
                     <li class="list-group-item">Nacho</li>
@@ -102,7 +102,6 @@
             </div>
           </div>
       </div>
-
 
     </body>
 </html>
