--- a/comida.html
+++ b/comida.html
@@ -10,19 +10,16 @@
     </head>
     <body class="cuerpo">
 
-
       <div id="uno" class="grid-container callout">
 
-
-        <div class="medium-4">
+        <div class="medium-4 titulo">
           <h1>Venezolanisima</h1>
           <p class"help-text">La mejor y mas variada gastronomia del mundo</p>
         </div>
         <hr>
 
         <div class="grid-x">
-          <div class="medium-4 cell hide-for-small-only callout alert">
-
+          <div class="medium-4 cell hide-for-small-only callout lateral">
             <div class="grid-x input-group">
               <input class="input-group-field" type="text" placeholder="Buscar">
               <div class="input-group-button">
@@ -31,7 +28,6 @@
                 </button>
               </div>
             </div>
-
             <div class="grid-x">
               <div class="cell vertical menu expanded">
                 <a href="#" class="hollow button">Inicio</a>
@@ -39,11 +35,8 @@
                 <a href="#" class="hollow button">Postres</a>
               </div>
             </div>
-
             <div class="grid-x">
-
               <h5>Favoritos:</h5>
-
               <div class="grid-x large-uncollapse">
                   <div class="medium-4">
                     <img src="img/hallaca.jpg" alt="Hallacas" class="thumbnail"/>
@@ -81,10 +74,6 @@
                 <li><a href="#">Hallacas</a></li>
                 <li><a href="#">Dulce de Lechosa</a></li>
                 </ul>
-
-
-
-
               </div>
           </div>
 
@@ -125,7 +114,28 @@
                   </label>
                   <a href="#" class="button expanded"><i class="fi-pencil"></i> Publicar</a>
               </div>
-
+              <div class="card-section">
+                <div class="media-object callout">
+                  <div class="media-object-section">
+                    <div class="thumbnail">
+                      <img class="avatar" src="img/fem_avatar_01.png">
+                    </div>
+                  </div>
+                  <div class="media-object-section">
+                    <p><b>Gaby:</b>Excelente Receta.</p>
+                  </div>
+                </div>
+                <div class="media-object callout">
+                  <div class="media-object-section">
+                    <div class="thumbnail">
+                      <img class="avatar" src="img/mas_avatar_01.png">
+                    </div>
+                  </div>
+                  <div class="media-object-section">
+                    <p><b>Julio:</b>La mejor receta que he visto</p>
+                  </div>
+                </div>
+              </div>
             </div>
             <div class="card">
               <div class="card-section">
@@ -155,6 +165,28 @@
                     <textarea name="comentario1" rows="1"></textarea>
                   </label>
                   <a href="#" class="button expanded"><i class="fi-pencil"></i> Publicar</a>
+              </div>
+              <div class="card-section">
+                <div class="media-object callout">
+                  <div class="media-object-section">
+                    <div class="thumbnail">
+                      <img class="avatar" src="img/mas_avatar_02.png">
+                    </div>
+                  </div>
+                  <div class="media-object-section">
+                    <p><b>Marcos:</b>Lechosa? Lechoza? Papaya?</p>
+                  </div>
+                </div>
+                <div class="media-object callout">
+                  <div class="media-object-section">
+                    <div class="thumbnail">
+                      <img class="avatar" src="img/fem_avatar_02.png">
+                    </div>
+                  </div>
+                  <div class="media-object-section">
+                    <p><b>Mari:</b>Rico Dulce!!!!</p>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
